--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Union Investment
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<link type="text/css" href="css/style.css" rel="stylesheet" media="screen" />
+<title>Crud2Go by Union Investment</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+<body>
+<div id="container">
+	
+	<div id="banner" >
+		<a href="http://www.union-investment.de"><img src="images/ui_48.jpg" alt="" width="56" height="56" border="0" /></a>
+		<div id="innerbanner">
+
+		</div>	
+ 		
+	</div>
+	
+
+	<div id="content">
+		<h2>Welcome to Union Investment at github</h2>
+The Union Investment Group, based in Frankfurt/Main, Germany, is today one of Europe's leading asset managers for private and institutional clients. <br>
+Union Investment offers a wide range of investment solutions in various asset ides and investment styles: <br>
+equity, fixed income, money market, alternative investments and quantitative structured funds.<br>
+Firmly rooted in our German home market, we have also grown into a leading international asset manager through subsidiaries and strategic partnerships. <br>
+<br>
+						<div class="article">
+	                <h3><span><a href="crud2go.html">Crud2Go</a></span></h3>
+	                			<p>
+			Crud2Go is an easy to use portlet for crud operations.<br>
+			
+			It has been developed for the usage in a liferay portal using oracle databases(other options under investigation). <br>
+			
+			The portlet implementation is based on vaadin and the configuration is done via xml upload.<br>
+			
+			Possible configuration options are described in the user documentation or in the xsd of the configuration xml.<br>
+			
+			Addtional functionality can be configured in a groovy code block in the config file.	<br>
+			</p>
+	                
+	                <p class="btn-more box"><strong><a href="crud2go.html">Details</a></strong></p>
+	      </div>
+	      <br>
+	      <div class="article">
+	                <h3><span><a href="crud2goGen.html">Crud2Go generator</a></span></h3>
+	                <p>
+	                	Crud2Go generator is a REST based service to generate configuration files for the Crud2Go Portlet.
+	                </p>
+	                
+	                <p class="btn-more box"><strong><a href="crud2goGen.html">Details</a></strong></p>
+	      </div>
+
+
+	</div>
+ 	<div id="footer"><h1></h1></div>
+</div>
+</body>
+</html>
