--- a/crud2go.html
+++ b/crud2go.html
@@ -66,7 +66,7 @@ Addtional functionality can be configured in a groovy code block in the config f
 	   <br/>   
 
  <div class="article">
-	                <h3>Examples</span></h3>
+	                <h3><span>Examples</span></h3>
 	                	<br/><br/>
 	                Example 1: table with filter
 									<img src="images/example_table_filter.png" alt="table with filter">
